--- a/Woops/WebContent/WEB-INF/web.xml
+++ b/Woops/WebContent/WEB-INF/web.xml
@@ -3,7 +3,13 @@
 	<display-name>Application WOOPS</display-name>
    <servlet>
       <servlet-name>action</servlet-name>
-      <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
+      
+      <servlet-class>view.WoopsFrontController</servlet-class>
+     
+     <!- modifié -->
+     <!- <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>-->
+     
+     
       <init-param>
          <param-name>config</param-name>
          <param-value>/WEB-INF/struts-config.xml</param-value>
@@ -32,7 +38,25 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
-
+  
+  
+		<!---------------------------------------->
+		<!- DEBUT servlet pour Common Controls	-->
+		<!---------------------------------------->
+		
+	<servlet> 
+		<servlet-name>res</servlet-name>
+		<display-name>Ressource Servlet</display-name>
+		<description>Provides access to cached Ressources</description>
+		<servlet-class>com.cc.framework.resource.ResourceServlet</servlet-class>
+	</servlet> 
+	
+		<!---------------------------------------->
+		<!- FIN servlet pour Common Controls	-->
+		<!---------------------------------------->
+		
+		
+		
    <servlet-mapping>
       <servlet-name>action</servlet-name>
       <url-pattern>*.do</url-pattern>
@@ -41,6 +65,24 @@
     <servlet-name>WoopsServlet</servlet-name>
     <url-pattern>/WoopsServlet</url-pattern>
   </servlet-mapping>
+
+
+
+
+		<!------------------------------------------------>
+		<!- DEBUT servlet-mapping pour Common Controls	-->
+		<!------------------------------------------------>
+
+	<servlet-mapping> 
+		<servlet-name>res</servlet-name>
+		<url-pattern>*.res</url-pattern>
+	</servlet-mapping>
+
+		<!------------------------------------------------>
+		<!- FIN servlet-mapping pour Common Controls	-->
+		<!------------------------------------------------>
+		
+
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
@@ -59,7 +101,56 @@
 			<taglib-uri>/WEB-INF/struts-logic.tld</taglib-uri>
 			<taglib-location>/WEB-INF/tags/struts-logic.tld</taglib-location>
 		</taglib>
+		
+		
+		<!--------------------------------------->
+		<!- DEBUT taglibs pour Common Controls -->
+		<!--------------------------------------->
+
+		<taglib> 
+			<taglib-uri>/cc-base</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-base.tld</taglib-location> 
+		</taglib> 
+		
+		<taglib> 
+			<taglib-uri>/cc-controls</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-controls.tld</taglib-location> 
+		</taglib> 
+		
+		<taglib> 
+			<taglib-uri>/cc-forms</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-forms.tld</taglib-location> 
+		</taglib> 
+		
+		<taglib> 
+			<taglib-uri>/cc-menu</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-menu.tld</taglib-location> 
+		</taglib> 
+		
+		<taglib> 
+			<taglib-uri>/cc-security</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-security.tld</taglib-location>
+		</taglib> 
+		
+		<taglib> 
+			<taglib-uri>/cc-svg</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-svg.tld</taglib-location> 
+		</taglib>
+		 
+		<taglib> 
+			<taglib-uri>/cc-template</taglib-uri> 
+			<taglib-location>/WEB-INF/tags/cc-template.tld</taglib-location> 
+		</taglib>
+		 
+		<taglib> 
+			<taglib-uri>/WEB-INF/tlds/cc-utility.tld</taglib-uri> 
+			<taglib-location>/WEB-INF/tlds/cc-utility.tld</taglib-location> 
+		</taglib>
+		
+		<!------------------------------------->
+		<!- FIN taglibs pour Common Controls -->
+		<!------------------------------------->
+
 	</jsp-config>
 
 </web-app>
-
