--- a/Woops/.classpath
+++ b/Woops/.classpath
@@ -6,27 +6,27 @@
 	<classpathentry kind="var" path="TOMCAT_HOME/common/lib/jsp-api.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry output="work" kind="src" path="work"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/struts.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/commons-beanutils.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/commons-validator.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/commons-collections.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/commons-digester.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/commons-fileupload.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/xerces.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/avalon.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/batik.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/castor.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/cglib-full-2.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/classes12.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/dom4j-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/ehcache-0.9.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/fop.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/jta.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/logkit.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/odmg-3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/xalan.jar"/>
-	<classpathentry kind="lib" path="C:/Abeilles/Travail/eclipse 3.1/workspace/Woops/WebContent/WEB-INF/lib/hibernate2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-validator.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-digester.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xerces.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/avalon.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/castor.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cglib-full-2.0.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/classes12.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-1.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ehcache-0.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fop.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jta.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/logkit.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/odmg-3.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xalan.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate2.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
