--- a/Woops/.project
+++ b/Woops/.project
@@ -14,5 +14,14 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>com.sysdeo.eclipse.tomcat.tomcatnature</nature>
+		<nature>com.tssap.selena.model.modeling_nature</nature>
+		<nature>com.borland.selena.uml14.uml14_nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Suspended Root</name>
+			<type>2</type>
+			<location>SuspendedRootVariable</location>
+		</link>
+	</linkedResources>
 </projectDescription>
