Modification du web.xml

--- a/Woops/WebContent/WEB-INF/web.xml
+++ b/Woops/WebContent/WEB-INF/web.xml
@@ -1,112 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.4" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>Application WOOPS</display-name>
-   <servlet>
-      <servlet-name>action</servlet-name>
-      
-      <servlet-class>view.WoopsFrontController</servlet-class>
-     
-     <!- modifié -->
-     <!- <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>-->
-     
-     
-      <init-param>
-         <param-name>config</param-name>
-         <param-value>/WEB-INF/struts-config.xml</param-value>
-      </init-param>
-      <init-param>
-         <param-name>debug</param-name>
-         <param-value>2</param-value>
-      </init-param>
-      <init-param>
-         <param-name>detail</param-name>
-         <param-value>2</param-value>
-      </init-param>
-      <load-on-startup>1</load-on-startup>
-   </servlet>
-  <servlet>
-    <description>Servlet d'initialisation de l'application</description>
-    <servlet-name>WoopsServlet</servlet-name>
-    <servlet-class>view.WoopsServlet</servlet-class>
-    <init-param>
-      <param-name>log4jFile</param-name>
-      <param-value>properties/log4j.properties</param-value>
-    </init-param>
-    <init-param>
-      <param-name>hibernateConfFile</param-name>
-      <param-value>WEB-INF/classes/hibernate.cfg.xml</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+	<servlet>
+    	<servlet-name>action</servlet-name>
+		<servlet-class>view.WoopsFrontController</servlet-class>
+	    <init-param>
+    	     <param-name>config</param-name>
+        	 <param-value>/WEB-INF/struts-config.xml</param-value>
+      	</init-param>
+      	<init-param>
+        	<param-name>debug</param-name>
+         	<param-value>2</param-value>
+      	</init-param>
+      	<init-param>
+        	<param-name>detail</param-name>
+         	<param-value>2</param-value>
+      	</init-param>
+		<load-on-startup>1</load-on-startup>
+  	</servlet>
+  	<servlet>
+    	<description>Servlet d'initialisation de l'application</description>
+    	<servlet-name>WoopsServlet</servlet-name>
+    	<servlet-class>view.WoopsServlet</servlet-class>
+    	<init-param>
+      		<param-name>log4jFile</param-name>
+      		<param-value>properties/log4j.properties</param-value>
+    	</init-param>
+    	<init-param>
+      		<param-name>hibernateConfFile</param-name>
+      		<param-value>WEB-INF/classes/hibernate.cfg.xml</param-value>
+    	</init-param>
+ 		<load-on-startup>1</load-on-startup>
+ 	</servlet>
   
-  
-		<!---------------------------------------->
-		<!- DEBUT servlet pour Common Controls	-->
-		<!---------------------------------------->
-		
 	<servlet> 
 		<servlet-name>res</servlet-name>
 		<display-name>Ressource Servlet</display-name>
 		<description>Provides access to cached Ressources</description>
 		<servlet-class>com.cc.framework.resource.ResourceServlet</servlet-class>
 	</servlet> 
-	
-		<!---------------------------------------->
-		<!- FIN servlet pour Common Controls	-->
-		<!---------------------------------------->
 		
 		
 		
-   <servlet-mapping>
-      <servlet-name>action</servlet-name>
-      <url-pattern>*.do</url-pattern>
-   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>WoopsServlet</servlet-name>
-    <url-pattern>/WoopsServlet</url-pattern>
-  </servlet-mapping>
-
-
-
-
-		<!------------------------------------------------>
-		<!- DEBUT servlet-mapping pour Common Controls	-->
-		<!------------------------------------------------>
+	<!-- Servlet-mapping pour Common Controls-->
+  	<servlet-mapping>
+  		<servlet-name>action</servlet-name>
+    	<url-pattern>*.do</url-pattern>
+ 	</servlet-mapping>
+ 
+ 	<servlet-mapping>
+    	<servlet-name>WoopsServlet</servlet-name>
+    	<url-pattern>/WoopsServlet</url-pattern>
+ 	</servlet-mapping>
 
 	<servlet-mapping> 
 		<servlet-name>res</servlet-name>
 		<url-pattern>*.res</url-pattern>
 	</servlet-mapping>
 
-		<!------------------------------------------------>
-		<!- FIN servlet-mapping pour Common Controls	-->
-		<!------------------------------------------------>
-		
-
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
+	<!-- Taglibs -->
 	<jsp-config>
+		<!-- Taglibs pour Struts -->
 		<taglib>
-			<taglib-uri>/WEB-INF/struts-bean.tld</taglib-uri>
+			<taglib-uri>/struts-bean</taglib-uri>
 			<taglib-location>/WEB-INF/tags/struts-bean.tld</taglib-location>
 		</taglib>
 		<taglib>
-			<taglib-uri>/WEB-INF/struts-html.tld</taglib-uri>
+			<taglib-uri>/struts-html</taglib-uri>
 			<taglib-location>/WEB-INF/tags/struts-html.tld</taglib-location>
 		</taglib>
 		<taglib>
-			<taglib-uri>/WEB-INF/struts-logic.tld</taglib-uri>
+			<taglib-uri>/struts-logic</taglib-uri>
 			<taglib-location>/WEB-INF/tags/struts-logic.tld</taglib-location>
 		</taglib>
 		
-		
-		<!--------------------------------------->
-		<!- DEBUT taglibs pour Common Controls -->
-		<!--------------------------------------->
-
+		<!-- Taglibs pour Common Controls -->
 		<taglib> 
 			<taglib-uri>/cc-base</taglib-uri> 
 			<taglib-location>/WEB-INF/tags/cc-base.tld</taglib-location> 
@@ -143,14 +116,9 @@
 		</taglib>
 		 
 		<taglib> 
-			<taglib-uri>/WEB-INF/tlds/cc-utility.tld</taglib-uri> 
+			<taglib-uri>/cc-utility.tld</taglib-uri> 
 			<taglib-location>/WEB-INF/tlds/cc-utility.tld</taglib-location> 
 		</taglib>
-		
-		<!------------------------------------->
-		<!- FIN taglibs pour Common Controls -->
-		<!------------------------------------->
-
 	</jsp-config>
 
 </web-app>
