--- a/Woops/.classpath
+++ b/Woops/.classpath
@@ -27,5 +27,9 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/odmg-3.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xalan.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/common-controls-1.2.061.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/common-controls-trial-1.2.075.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ecs-1.4.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jakarta-regexp-1.4.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
