--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -1,7 +1,10 @@
 
 ##### Messages d'erreur #################################
+errors.global=Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application"
 
 errors.persistance.global=Erreur d'accés à la base de données
+errors.persistance.select=Erreur au moment de la récupération des données dans la base de données
+
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire=Le champ <i>{0}</i> est obligatoire.
