*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -5,6 +5,7 @@ errors.global=Une erreur interne non identifiée s'est produite. Essayez de relan
 errors.persistance.global=Erreur d'accés à la base de données
 errors.persistance.select=Erreur au moment de la récupération des données dans la base de données
 
+errors.login.invalide=Votre identification est incorrecte, veuillez réessayer.
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire=Le champ <i>{0}</i> est obligatoire.
