Ajouts de quelques ressources pour : login gestion dependances activité liste activites

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -19,5 +19,32 @@ message.update.ok=Mise à jour réussie {0}.
 message.delete.ok=Suppression réussie {0}.
 
 
-##### Formulaires #################################
-button.title.login=Login
+##### Titres des pages #################################
+page.title.login 						= Identification
+page.title.listActivities 				= Liste des activités
+page.title.manageActivityDependances 	= Gérer les dépendances
+
+##### Formulaires  et tables #################################
+
+	## Login
+button.title.login		= Se logguer
+form.title.login		= Login
+form.field.login		= Login
+form.field.password 	= Mot de passe
+	
+	## Activities list
+table.title.listActivities 			= Liste des activités
+table.field.listActivities.name 	= Nom
+table.field.listActivities.details 	= Description
+table.field.listActivities.state 	= Etat
+table.field.listActivities.edit 	= Editer
+table.field.listActivities.delete 	= Effacer ?
+
+	## manageActivityDependances
+	
+table.title.manageActivityDependances			= Gérer les dépedances d'une activité
+table.field.manageActivityDependances			= Liste des activités
+table.field.manageActivityDependances.toAdd 	= Possibles
+table.field.manageActivityDependances.added		= Effectifs
+
+
