Ajout du pattern State

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -47,4 +47,7 @@ table.field.manageActivityDependances			= Liste des activités
 table.field.manageActivityDependances.toAdd 	= Possibles
 table.field.manageActivityDependances.added		= Effectifs
 
-
+##### Etats d'une activités #################################
+createdState	= Créée
+inprocessState	= En cours
+finishedState	= Finie
