modif pour manageactivitiesdependencies

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -42,10 +42,11 @@ table.field.listActivities.delete 	= Effacer ?
 
 	## manageActivityDependances
 	
-table.title.manageActivityDependances			= Gérer les dépedances d'une activité
-table.field.manageActivityDependances			= Liste des activités
-table.field.manageActivityDependances.toAdd 	= Possibles
-table.field.manageActivityDependances.added		= Effectifs
+form.title.manageActivityDependances			= Gérer les dépedances d'une activité
+form.field.manageActivityDependances			= Liste des activités
+form.field.manageActivityDependances.toAdd 		= Possibles
+form.field.manageActivityDependances.added		= Effectifs
+form.button.manageActivityDependances.submit	= Valider les dépendances
 
 ##### Etats d'une activités #################################
 createdState	= Créée
