Ajout de messages

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -27,7 +27,7 @@ page.title.manageActivityDependances 	= Gérer les dépendances
 ##### Formulaires  et tables #################################
 
 	## Login
-button.title.login		= Se logguer
+button.title.login		= Connexion
 form.title.login		= Login
 form.field.login		= Login
 form.field.password 	= Mot de passe
@@ -39,6 +39,7 @@ table.field.listActivities.details 	= Description
 table.field.listActivities.state 	= Etat
 table.field.listActivities.edit 	= Editer
 table.field.listActivities.delete 	= Effacer ?
+table.field.listActivities.action	= Action
 
 	## manageActivityDependances
 	
@@ -48,7 +49,14 @@ form.field.manageActivityDependances.toAdd 		= Possibles
 form.field.manageActivityDependances.added		= Effectifs
 form.button.manageActivityDependances.submit	= Valider les dépendances
 
+	## messages
+msg.error 	= Erreur
+msg.info 	= Information
+
+msg.error.activity.change.state	= Le changement d'état de l'activité {0} n'a pas pu être effectué
+msg.info.activity.change.state = Le changement d'état de l'activité {0} a été pris en compte
+
 ##### Etats d'une activités #################################
-createdState	= Créée
-inprocessState	= En cours
-finishedState	= Finie
+created		= Créée
+inProgress	= En cours
+finished	= Finie
