Amélioration du CU_part_2 :
- l'action est effectuée lorsque l'utilisateur clique sur le bouton edit dans la liste des activités
- on vérifie bien que l'activité na pas été déjà commencée pour pouvoir modifier ses dépendances

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -7,6 +7,8 @@ errors.persistance.select=Erreur au moment de la récupération des données dans l
 
 errors.login.invalide=Votre identification est incorrecte, veuillez réessayer.
 
+errors.manageActivityDependances=Impossible de changer les dépendances de cette activité car elle a déjà été démmarrée
+
 ##### Controles génériques ###############################
 errors.champ.obligatoire=Le champ <i>{0}</i> est obligatoire.
 errors.champ.date=Le champ <i>{0}</i> n'est pas une date valide (jj/mm/aaaa).
