*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -1,6 +1,6 @@
 
 ##### Messages d'erreur #################################
-errors.global=Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application"
+errors.global=Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application
 
 errors.persistance.global=Erreur d'accés à la base de données
 errors.persistance.select=Erreur au moment de la récupération des données dans la base de données
@@ -58,7 +58,11 @@ msg.info 	= Information
 msg.error.activity.change.state	= Le changement d'état de l'activité {0} n'a pas pu être effectué
 msg.info.activity.change.state = Le changement d'état de l'activité {0} a été pris en compte
 
-##### Etats d'une activités #################################
+##### Etats d'une activité #################################
 created		= Créée
 inProgress	= En cours
 finished	= Finie
+
+##### Actions d'une activités #################################
+start	= Commencer
+finish	= Terminer
