--- a/Woops/WebContent/WEB-INF/web.xml
+++ b/Woops/WebContent/WEB-INF/web.xml
@@ -120,5 +120,37 @@
 			<taglib-location>/WEB-INF/tags/cc-utility.tld</taglib-location> 
 		</taglib>
 	</jsp-config>
+	
+	
+	
+	
+	<security-constraint>
+      <display-name>Example Security Constraint</display-name>
+      <web-resource-collection>
+         <web-resource-name>Protected Area</web-resource-name>
+    <!-- Define the context-relative URL(s) to be protected -->
+         <url-pattern>/html/*</url-pattern>
+    <!-- If you list http methods, only those methods are protected -->
+         <http-method>GET</http-method>
+         <http-method>POST</http-method>
+    	  <http-method>PUT</http-method>
+      </web-resource-collection>
+      <auth-constraint>
+         <!-- Anyone with one of the listed roles may access this area -->
+         <role-name>tomcat</role-name>
+      </auth-constraint>
+    </security-constraint> 
+    
+   <login-config>
+   <auth-method>FORM</auth-method>
+   <form-login-config>
+         <form-login-page>/html/user/login.jsp</form-login-page>
+         <form-error-page>/html/user/login.jsp</form-error-page>
+   </form-login-config>
+	</login-config> 
+    
+    <security-role>
+      <role-name>tomcat</role-name>
+    </security-role> 
 
 </web-app>
