--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -10,9 +10,9 @@ errors.login.invalide=Votre identification est incorrecte, veuillez réessayer.
 errors.manageActivityDependances=Impossible de changer les dépendances de cette activité car elle a déjà été démmarrée
 
 ##### Controles génériques ###############################
-errors.champ.obligatoire=Le champ <i>{0}</i> est obligatoire.
-errors.champ.date=Le champ <i>{0}</i> n'est pas une date valide (jj/mm/aaaa).
-errors.champ.numerique=Le champ <i>{0}</i> doit être numérique.
+errors.champ.obligatoire=Le champ {0} est obligatoire.
+errors.champ.date=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
+errors.champ.numerique=Le champ {0} doit être numérique.
 
 
 ##### Messages applicatif #################################
