Ajout de la page pour modifier les types des dépendances

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -25,6 +25,7 @@ message.delete.ok=Suppression réussie {0}.
 page.title.login 						= Identification
 page.title.listActivities 				= Liste des activités
 page.title.manageActivityDependances 	= Gérer les dépendances
+page.title.manageDependancesTypes 		= Gérer les types des dépendances
 
 ##### Formulaires  et tables #################################
 
@@ -50,6 +51,21 @@ form.field.manageActivityDependances			= Liste des activités
 form.field.manageActivityDependances.toAdd 		= Possibles
 form.field.manageActivityDependances.added		= Effectifs
 form.button.manageActivityDependances.submit	= Valider les dépendances
+
+
+	## manageDependancesTypes
+	
+list.title.manageDependancesTypes				= Liste des dépendances et leur type associé
+list.manageDependancesTypes.predecessor 		= Predecesseur
+list.manageDependancesTypes.successor			= Successeur
+list.manageDependancesTypes.columngroup.title	= Type
+list.manageDependancesTypes.columngroup.fs		= fin à début
+list.manageDependancesTypes.columngroup.ff		= fin à fin
+list.manageDependancesTypes.columngroup.ss		= debut à debut
+list.manageDependancesTypes.columngroup.sf		= début à fin
+list.button.manageDependancesTypes.submit		= Valider les types
+
+
 
 	## messages
 msg.error 	= Erreur
