--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -71,8 +71,10 @@ list.button.manageDependancesTypes.submit		= Valider les types
 msg.error 	= Erreur
 msg.info 	= Information
 
-msg.error.activity.change.state	= Le changement d'état de l'activité {0} n'a pas pu être effectué
-msg.info.activity.change.state = Le changement d'état de l'activité {0} a été pris en compte
+msg.error.activity.change.state.created	= Il n'est pas possible actuellement de commencer l'activité {0}
+msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer l'activité {0}
+msg.info.activity.change.state.inprogress = L'activité {0} est à présent en cours de réalisation
+msg.info.activity.change.state.finished = L'activité {0} a été complètement réalisée
 
 ##### Etats d'une activité #################################
 created		= Créée
