- Correction sur le CU_part_1 : G?rer une activit?
- Ajout de message d'information lors des sauvegardes en BD

- Ajout d'une HashMap en session stockant la liste des activit?s d'un user

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -4,6 +4,7 @@ errors.global=Une erreur interne non identifiée s'est produite. Essayez de relan
 
 errors.persistance.global=Erreur d'accés à la base de données
 errors.persistance.select=Erreur au moment de la récupération des données dans la base de données
+errors.persistance.doublon= L'objet "{0}" existe déjà
 
 errors.login.invalide=Votre identification est incorrecte, veuillez réessayer.
 
@@ -14,11 +15,6 @@ errors.champ.obligatoire=Le champ {0} est obligatoire.
 errors.champ.date=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
 errors.champ.numerique=Le champ {0} doit être numérique.
 
-
-##### Messages applicatif #################################
-message.insert.ok=Insertion réussie {0}.
-message.update.ok=Mise à jour réussie {0}.
-message.delete.ok=Suppression réussie {0}.
 
 
 ##### Titres des pages #################################
@@ -43,6 +39,17 @@ table.field.listActivities.state 	= Etat
 table.field.listActivities.edit 	= Editer
 table.field.listActivities.delete 	= Effacer ?
 table.field.listActivities.action	= Action
+
+
+	## manageActivityCreation
+	
+form.title.manageActivityCreation.insert	= Ajouter une activité
+form.title.manageActivityCreation.update	= Modifier une activité
+form.field.manageActivityCreation.name		= Nom
+form.field.manageActivityCreation.details	= Descritpion
+form.button.manageActivityCreation.insert	= Ajouter
+form.button.manageActivityCreation.update	= Modifier
+
 
 	## manageActivityDependances
 	
@@ -73,8 +80,13 @@ msg.info 	= Information
 
 msg.error.activity.change.state.created	= Il n'est pas possible actuellement de commencer l'activité {0}
 msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer l'activité {0}
-msg.info.activity.change.state.inprogress = L'activité {0} est à présent en cours de réalisation
-msg.info.activity.change.state.finished = L'activité {0} a été complètement réalisée
+msg.info.activity.change.state.inprogress = L'activité "{0}" est à présent en cours de réalisation
+msg.info.activity.change.state.finished = L'activité "{0}" a été complètement réalisée
+
+msg.info.activity.inserted = L'activité "{0}" a bien été ajoutée
+msg.info.activity.updated = L'activité "{0}" a bien été modifiée
+
+msg.info.activity.dependances.saved = Les dépendances de cette activité ont bien été sauvegardées
 
 ##### Etats d'une activité #################################
 created		= Créée
