*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -33,6 +33,7 @@ form.field.password 	= Mot de passe
 	
 	## Activities list
 table.title.listActivities 			= Liste des activités
+table.title.listChangeStateActivities = Liste des activités pouvant changer d'état
 table.field.listActivities.name 	= Nom
 table.field.listActivities.details 	= Description
 table.field.listActivities.state 	= Etat
