Ajout des boutons "Gérer les dépendances..." et "Gérer les types..." dans la page manageActivityCreation
Cela permet a partir de la page manageActivityCreation en mode update (uniquement), de gérer les dépendances et les types de ces dépendances de l'activité que l'on modifie.

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -44,12 +44,14 @@ table.field.listActivities.action	= Action
 
 	## manageActivityCreation
 	
-form.title.manageActivityCreation.insert	= Ajouter une activité
-form.title.manageActivityCreation.update	= Modifier une activité
-form.field.manageActivityCreation.name		= Nom
-form.field.manageActivityCreation.details	= Descritpion
-form.button.manageActivityCreation.insert	= Ajouter
-form.button.manageActivityCreation.update	= Modifier
+form.title.manageActivityCreation.insert			= Ajouter une activité
+form.title.manageActivityCreation.update			= Modifier une activité
+form.field.manageActivityCreation.name				= Nom
+form.field.manageActivityCreation.details			= Descritpion
+form.button.manageActivityCreation.insert			= Ajouter
+form.button.manageActivityCreation.update			= Modifier
+form.button.manageActivityCreation.manageDependances= Gérer les dépendances...
+form.button.manageActivityCreation.manageTypes		= Gérer les types...	
 
 
 	## manageActivityDependances
@@ -87,7 +89,9 @@ msg.info.activity.change.state.finished = L'activité "{0}" a été complètement ré
 msg.info.activity.inserted = L'activité "{0}" a bien été ajoutée
 msg.info.activity.updated = L'activité "{0}" a bien été modifiée
 
-msg.info.activity.dependances.saved = Les dépendances de cette activité ont bien été sauvegardées
+msg.info.activity.dependances.saved = Les dépendances de l'activité "{0}" ont bien été sauvegardées
+msg.info.activity.dependancesTypes.saved = Les types des dépendances de l'activité "{0}" ont bien été sauvegardées
+
 
 ##### Etats d'une activité #################################
 created		= Créée
