*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -2,18 +2,18 @@
 ##### Messages d'erreur #################################
 errors.global=Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application
 
-errors.persistance.global=Erreur d'accés à la base de données
-errors.persistance.select=Erreur au moment de la récupération des données dans la base de données
-errors.persistance.doublon= L'objet "{0}" existe déjà
+errors.persistance.global			=Erreur d'accés à la base de données
+errors.persistance.select			=Erreur au moment de la récupération des données dans la base de données
+errors.persistance.doublon			= L'objet "{0}" existe déjà
 
-errors.login.invalide=Votre identification est incorrecte, veuillez réessayer.
+errors.login.invalide				=Votre identification est incorrecte, veuillez réessayer.
 
-errors.manageActivityDependances=Impossible de changer les dépendances de cette activité car elle a déjà été démmarrée
+errors.manageActivityDependances	=Impossible de changer les dépendances de cette activité car elle a déjà été démmarrée
 
 ##### Controles génériques ###############################
-errors.champ.obligatoire=Le champ {0} est obligatoire.
-errors.champ.date=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
-errors.champ.numerique=Le champ {0} doit être numérique.
+errors.champ.obligatoire		=Le champ {0} est obligatoire.
+errors.champ.date				=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
+errors.champ.numerique			=Le champ {0} doit être numérique.
 
 
 
@@ -81,13 +81,13 @@ list.button.manageDependancesTypes.submit		= Valider les types
 msg.error 	= Erreur
 msg.info 	= Information
 
-msg.error.activity.change.state.created	= Il n'est pas possible actuellement de commencer l'activité {0}
+msg.error.activity.change.state.created		= Il n'est pas possible actuellement de commencer l'activité {0}
 msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer l'activité {0}
 msg.info.activity.change.state.inprogress = L'activité "{0}" est à présent en cours de réalisation
 msg.info.activity.change.state.finished = L'activité "{0}" a été complètement réalisée
 
-msg.info.activity.inserted = L'activité "{0}" a bien été ajoutée
-msg.info.activity.updated = L'activité "{0}" a bien été modifiée
+msg.info.activity.inserted 	= L'activité "{0}" a bien été ajoutée
+msg.info.activity.updated 	= L'activité "{0}" a bien été modifiée
 
 msg.info.activity.dependances.saved = Les dépendances de l'activité "{0}" ont bien été sauvegardées
 msg.info.activity.dependancesTypes.saved = Les types des dépendances de l'activité "{0}" ont bien été sauvegardées
@@ -101,3 +101,9 @@ finished	= Finie
 ##### Actions d'une activités #################################
 start	= Commencer
 finish	= Terminer
+
+
+##### Menu #################################
+menu.listActivities 			= Lister les activités
+menu.manageActivityCreation		= Créer une nouvelle activité
+menu.deconnection 				= Se déconnecter
