--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -107,3 +107,4 @@ finish	= Terminer
 menu.listActivities 			= Lister les activités
 menu.manageActivityCreation		= Créer une nouvelle activité
 menu.deconnection 				= Se déconnecter
+menu.listChangeStateActivities  = Dernières validations
