Correction sur la navigation.
Correction du maxLength du nom d'une activit? dans son formulaire d'ajout/modification.

Correction du script sql insert_base.sql.

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -8,8 +8,6 @@ errors.persistance.doublon			= L'objet "{0}" existe déjà
 
 errors.login.invalide				=Votre identification est incorrecte, veuillez réessayer.
 
-errors.manageActivityDependances	=Impossible de changer les dépendances de cette activité car elle a déjà été démmarrée
-
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
 errors.champ.date				=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
@@ -24,6 +22,13 @@ page.title.manageActivityDependances 	= Gérer les dépendances
 page.title.manageDependancesTypes 		= Gérer les types des dépendances
 
 ##### Formulaires  et tables #################################
+
+	## Global
+
+form.button.finish		= Terminer
+form.button.next		= Suivant
+form.button.previous	= Précédent
+
 
 	## Login
 button.title.login		= Connexion
@@ -47,11 +52,7 @@ table.field.listActivities.action	= Action
 form.title.manageActivityCreation.insert			= Ajouter une activité
 form.title.manageActivityCreation.update			= Modifier une activité
 form.field.manageActivityCreation.name				= Nom
-form.field.manageActivityCreation.details			= Descritpion
-form.button.manageActivityCreation.insert			= Ajouter
-form.button.manageActivityCreation.update			= Modifier
-form.button.manageActivityCreation.manageDependances= Gérer les dépendances...
-form.button.manageActivityCreation.manageTypes		= Gérer les types...	
+form.field.manageActivityCreation.details			= Descritpion	
 
 
 	## manageActivityDependances
@@ -80,6 +81,7 @@ list.button.manageDependancesTypes.submit		= Valider les types
 	## messages
 msg.error 	= Erreur
 msg.info 	= Information
+msg.warning = Attention
 
 msg.error.activity.change.state.created		= Il n'est pas possible actuellement de commencer l'activité {0}
 msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer l'activité {0}
@@ -92,6 +94,8 @@ msg.info.activity.updated 	= L'activité "{0}" a bien été modifiée
 msg.info.activity.dependances.saved = Les dépendances de l'activité "{0}" ont bien été sauvegardées
 msg.info.activity.dependancesTypes.saved = Les types des dépendances de l'activité "{0}" ont bien été sauvegardées
 
+
+msg.info.activity.manageActivityDependances	=Vous ne pouvez plus changer les dépendances de l'activité "{0}" car elle a déjà été démarrée
 
 ##### Etats d'une activité #################################
 created		= Créée
