ajout de messages liés a l'administration

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -112,3 +112,10 @@ menu.listActivities 			= Lister les activités
 menu.manageActivityCreation		= Créer une nouvelle activité
 menu.deconnection 				= Se déconnecter
 menu.listChangeStateActivities  = Activités pouvant changer d'état
+
+##### Administration #################################
+admin.addUser.title				= Ajout d'un nouvel utilisateur
+admin.addUser.firstName			= Nom
+admin.addUser.lastName			= Prénom
+admin.error.password			= Veuillez vérifier votre mot de passe
+admin.button.validate			= Valider
