ajout de l'erreur de clé etrangere

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -2,11 +2,11 @@
 ##### Messages d'erreur #################################
 errors.global=Une erreur interne non identifiée s'est produite. Essayez de relancer le serveur d'application
 
-errors.persistance.global			=Erreur d'accés à la base de données
-errors.persistance.select			=Erreur au moment de la récupération des données dans la base de données
-errors.persistance.doublon			= L'objet "{0}" existe déjà
-
-errors.login.invalide				=Votre identification est incorrecte, veuillez réessayer.
+errors.persistance.global				= Erreur d'accés à la base de données
+errors.persistance.select				= Erreur au moment de la récupération des données dans la base de données
+errors.persistance.doublon				= L'objet "{0}" existe déjà
+errors.persistance.activity.foreignKey	= Impossible de supprimer cette activité :  il s'agit d'une dépendance pour une autre activité (clé étrangère).
+errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
@@ -45,6 +45,7 @@ table.field.listActivities.state 	= Etat
 table.field.listActivities.edit 	= Editer
 table.field.listActivities.delete 	= Effacer ?
 table.field.listActivities.action	= Action
+table.field.listActivities.deleteConfirmation = Effacer cette activité ?
 
 
 	## manageActivityCreation
@@ -112,10 +113,3 @@ menu.listActivities 			= Lister les activités
 menu.manageActivityCreation		= Créer une nouvelle activité
 menu.deconnection 				= Se déconnecter
 menu.listChangeStateActivities  = Activités pouvant changer d'état
-
-##### Administration #################################
-admin.addUser.title				= Ajout d'un nouvel utilisateur
-admin.addUser.firstName			= Nom
-admin.addUser.lastName			= Prénom
-admin.error.password			= Veuillez vérifier votre mot de passe
-admin.button.validate			= Valider
