*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -113,3 +113,11 @@ menu.listActivities 			= Lister les activités
 menu.manageActivityCreation		= Créer une nouvelle activité
 menu.deconnection 				= Se déconnecter
 menu.listChangeStateActivities  = Activités pouvant changer d'état
+
+##### Admin #################################
+admin.addUser.title				= Ajout d'un nouvel utilisateur
+admin.addUser.firstName			= Nom
+admin.addUser.lastName			= Prénom
+admin.button.validate			= Valider
+admin.error.password			= Veuillez vérifier votre mot de passe
+admin.field.checkPassword		= Vérification du mot de passe
