*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -43,7 +43,7 @@ table.field.listActivities.name 	= Nom
 table.field.listActivities.details 	= Description
 table.field.listActivities.state 	= Etat
 table.field.listActivities.edit 	= Editer
-table.field.listActivities.delete 	= Effacer ?
+table.field.listActivities.delete 	= Supprimer ?
 table.field.listActivities.action	= Action
 table.field.listActivities.deleteConfirmation = Effacer cette activité ?
 
