Correction navigation manageActivity
Ajout d'une fiche de détail d'une activité lorsque l'on clique sur le nom de l'activité dans la liste

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -6,7 +6,7 @@ errors.persistance.global				= Erreur d'accés à la base de données
 errors.persistance.select				= Erreur au moment de la récupération des données dans la base de données
 errors.persistance.doublon				= L'objet "{0}" existe déjà
 errors.persistance.activity.foreignKey	= Impossible de supprimer cette activité :  il s'agit d'une dépendance pour une autre activité (clé étrangère).
-errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
+errors.login.invalide					=Votre identification est incorrecte, veuillez réessayer.
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
@@ -18,8 +18,10 @@ errors.champ.numerique			=Le champ {0} doit être numérique.
 ##### Titres des pages #################################
 page.title.login 						= Identification
 page.title.listActivities 				= Liste des activités
+page.title.manageActivityCreation		= Ajouter ou Modifier une activité
 page.title.manageActivityDependances 	= Gérer les dépendances
 page.title.manageDependancesTypes 		= Gérer les types des dépendances
+page.title.showActivitySummary 			= Voir la fiche de détail d'une activité
 
 ##### Formulaires  et tables #################################
 
@@ -29,6 +31,12 @@ form.button.finish		= Terminer
 form.button.next		= Suivant
 form.button.previous	= Précédent
 
+form.field.activity.name		= Nom
+form.field.activity.details		= Descritpion
+form.field.activity.state		= Etat
+form.field.activity.startDate	= Date de lancement
+form.field.activity.endDate		= Date de cloture	
+
 
 	## Login
 button.title.login		= Connexion
@@ -37,23 +45,22 @@ form.field.login		= Login
 form.field.password 	= Mot de passe
 	
 	## Activities list
-table.title.listActivities 			= Liste des activités
-table.title.listChangeStateActivities = Liste des activités pouvant changer d'état
-table.field.listActivities.name 	= Nom
-table.field.listActivities.details 	= Description
-table.field.listActivities.state 	= Etat
-table.field.listActivities.edit 	= Editer
-table.field.listActivities.delete 	= Supprimer ?
-table.field.listActivities.action	= Action
-table.field.listActivities.deleteConfirmation = Effacer cette activité ?
+table.title.listActivities 						= Liste des activités
+table.title.listChangeStateActivities 			= Liste des activités pouvant changer d'état
+table.field.listActivities.name 				= Nom
+table.field.listActivities.details 				= Description
+table.field.listActivities.state 				= Etat
+table.field.listActivities.edit 				= Editer
+table.field.listActivities.delete 				= Supprimer
+table.field.listActivities.action				= Action
+table.field.listActivities.deleteConfirmation 	= Effacer cette activité ?
 
 
 	## manageActivityCreation
 	
-form.title.manageActivityCreation.insert			= Ajouter une activité
-form.title.manageActivityCreation.update			= Modifier une activité
-form.field.manageActivityCreation.name				= Nom
-form.field.manageActivityCreation.details			= Descritpion	
+form.title.manageActivityCreation.insert	= Ajouter une activité
+form.title.manageActivityCreation.update	= Modifier une activité
+
 
 
 	## manageActivityDependances
@@ -71,12 +78,12 @@ list.title.manageDependancesTypes				= Liste des dépendances et leur type associ
 list.manageDependancesTypes.predecessor 		= Predecesseur
 list.manageDependancesTypes.successor			= Successeur
 list.manageDependancesTypes.columngroup.title	= Type
-list.manageDependancesTypes.columngroup.fs		= fin à début
-list.manageDependancesTypes.columngroup.ff		= fin à fin
-list.manageDependancesTypes.columngroup.ss		= debut à debut
-list.manageDependancesTypes.columngroup.sf		= début à fin
 list.button.manageDependancesTypes.submit		= Valider les types
 
+
+	## showActivitySummary
+	
+form.title.showActivitySummary	= Fiche de détail d'une activité
 
 
 	## messages
@@ -86,8 +93,8 @@ msg.warning = Attention
 
 msg.error.activity.change.state.created		= Il n'est pas possible actuellement de commencer l'activité {0}
 msg.error.activity.change.state.inprogress	= Il n'est pas possible actuellement de terminer l'activité {0}
-msg.info.activity.change.state.inprogress = L'activité "{0}" est à présent en cours de réalisation
-msg.info.activity.change.state.finished = L'activité "{0}" a été complètement réalisée
+msg.info.activity.change.state.inprogress 	= L'activité "{0}" est à présent en cours de réalisation
+msg.info.activity.change.state.finished 	= L'activité "{0}" a été complètement réalisée
 
 msg.info.activity.inserted 	= L'activité "{0}" a bien été ajoutée
 msg.info.activity.updated 	= L'activité "{0}" a bien été modifiée
@@ -97,6 +104,13 @@ msg.info.activity.dependancesTypes.saved = Les types des dépendances de l'activi
 
 
 msg.info.activity.manageActivityDependances	=Vous ne pouvez plus changer les dépendances de l'activité "{0}" car elle a déjà été démarrée
+
+
+##### Types de dépendnaces #################################
+finishToFinish	= fin à fin
+startToStart	= debut à debut
+startToFinish	= début à fin
+finishToStart	= fin à début
 
 ##### Etats d'une activité #################################
 created		= Créée
@@ -112,7 +126,7 @@ finish	= Terminer
 menu.listActivities 			= Lister les activités
 menu.manageActivityCreation		= Créer une nouvelle activité
 menu.deconnection 				= Se déconnecter
-menu.listChangeStateActivities  = Activités pouvant changer d'état
+menu.listChangeStateActivities  = Dernières validations
 
 ##### Admin #################################
 admin.addUser.title				= Ajout d'un nouvel utilisateur
