*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -22,6 +22,7 @@ page.title.manageActivityCreation		= Ajouter ou Modifier une activité
 page.title.manageActivityDependances 	= Gérer les dépendances
 page.title.manageDependancesTypes 		= Gérer les types des dépendances
 page.title.showActivitySummary 			= Voir la fiche de détail d'une activité
+page.title.listChangeStateActivities	= Liste des activités pouvant changer d'état
 
 ##### Formulaires  et tables #################################
 
@@ -136,6 +137,7 @@ admin.button.validate			= Valider
 admin.error.password			= Veuillez vérifier votre mot de passe
 admin.field.checkPassword		= Vérification du mot de passe
 
+admin.field.checkPassword		= Vérification du mot de passe
 admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
 admin.msg.error.user.insert		= L'insertion a échoué
 
